test/fail/basic_syntax/wrong_arg_count_plain_call.lly
#[
SyntaxError: Wrong number of arguments to f (1 for 0).
    from wrong_arg_count_plain_call.lly:8:
]#

define f {}

f(1)
